# pdf

./: CMakeLists.txt  README.md  main.cpp  main_test.cpp  pdftraverse.h  test_fu.pdf.odt  text.h  visitor_test.cpp  visitor_test.h
docs/: Doxyfile.in
docs/docs_build/html/: annotated.html  annotated_dup.js  classNodeVisitor-members.html  classNodeVisitor.html  classNodeVisitor.js  classNodeVisitor__inherit__graph.map  classNodeVisitor__inherit__graph.md5  classPDFnode-members.html  classPDFnode.html  classPDFnode.js  classPDFnode_3_01PDFArray_01_4-members.html  classPDFnode_3_01PDFArray_01_4.html  classPDFnode_3_01PDFArray_01_4.js  classPDFnode_3_01PDFArray_01_4__coll__graph.md5  classPDFnode_3_01PDFArray_01_4__inherit__graph.map  classPDFnode_3_01PDFArray_01_4__inherit__graph.md5  classPDFnode_3_01PDFDictionary_01_4-members.html  classPDFnode_3_01PDFDictionary_01_4.html  classPDFnode_3_01PDFDictionary_01_4.js  classPDFnode_3_01PDFDictionary_01_4__coll__graph.md5  classPDFnode_3_01PDFDictionary_01_4__inherit__graph.map  classPDFnode_3_01PDFDictionary_01_4__inherit__graph.md5  classPDFnode_3_01PDFIndirectObjectReference_01_4-members.html  classPDFnode_3_01PDFIndirectObjectReference_01_4.html  classPDFnode_3_01PDFIndirectObjectReference_01_4.js  classPDFnode_3_01PDFIndirectObjectReference_01_4__coll__graph.map  classPDFnode_3_01PDFIndirectObjectReference_01_4__coll__graph.md5  classPDFnode_3_01PDFIndirectObjectReference_01_4__inherit__graph.md5  classPDFnode_3_01PDFStreamInput_01_4-members.html  classPDFnode_3_01PDFStreamInput_01_4.html  classPDFnode_3_01PDFStreamInput_01_4.js  classPDFnode_3_01PDFStreamInput_01_4__coll__graph.md5  classPDFnode_3_01PDFStreamInput_01_4__inherit__graph.map  classPDFnode_3_01PDFStreamInput_01_4__inherit__graph.md5  classPDFnode__coll__graph.map  classPDFnode__coll__graph.md5  classPDFnode__inherit__graph.md5  classResourcesVisitor-members.html  classResourcesVisitor.html  classResourcesVisitor.js  (+45 more)
docs/docs_build/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_1.js  classes_2.js  pages_0.js  searchdata.js
src/: main.cpp  node_visitor.h  pdftraverse.h  resources_visitor.cpp  resources_visitor.h  text.h  text_visitor.cpp  text_visitor.h  textdata.h
tests/: catch.hpp  test1.cpp  test2.cpp  test_traverse_nodes.cpp
